logs/watchdog_20251011_1700.log
[11/10/2025 17:00:01,89] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[11/10/2025 17:00:02,25] END WATCHDOG 
